--- a/pom.xml
+++ b/pom.xml
@@ -150,8 +150,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>net.sourceforge.owlapi</groupId>
-			<artifactId>owlapi-distribution</artifactId>
-			<version>3.5.0</version>
+			<artifactId>owlapi-osgidistribution</artifactId>
+			<version>[3.5.1,3.9]</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -173,7 +173,7 @@
 		<dependency>
 			<groupId>edu.stanford.protege</groupId>
 			<artifactId>org.protege.editor.owl</artifactId>
-			<version>4.3.0</version>
+			<version>[4.3.0,6]</version>
 		</dependency>
 	</dependencies>
 </project>
